--- a/cs/styles.css
+++ b/cs/styles.css
@@ -2,3 +2,17 @@
   max-width: 100%;
   height: auto;
 }
+
+.container {
+  min-width: 992px !important;
+}
+
+.bg {
+  background-color: rgb(19, 17, 17);
+  color:lightseagreen;
+}
+
+.float-l{
+  float: left;
+  padding: 7px;
+}
