add languages.html to talk about each language/ test result.

--- a/cs/styles.css
+++ b/cs/styles.css
@@ -21,3 +21,8 @@
   background-color: rgb(19, 17, 17);
   color:lightseagreen;
 }
+
+.initialism {
+  font-size: 10vw;
+  text-transform: uppercase;
+}
